--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,10 @@
     <!-- You can change the theme colors from here -->
     <link id="tema" id="theme" rel="stylesheet">
 
+    <script src="https://apis.google.com/js/platform.js"></script>
+    <meta name="google-signin-client_id" content="1001969314719-lg607fntus2l1kcuu77q81nfdjsa480t.apps.googleusercontent.com">
+
+
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
